word mark reduction on mobile menu issue #134

--- a/styles/components/hamburger-nav.scss
+++ b/styles/components/hamburger-nav.scss
@@ -263,7 +263,7 @@
       #mobile-wordmark{
         img{
           margin:$xsmall;
-          width: 190px;
+          width: 133px;
           padding:0px;
           margin:0px;
           padding-top: $xsmall;
